// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`IdeRemove unit tests view tests IdeRemove renders an alternative state if provided post delete 1`] = `
[
  <div
    data-ui-id="IdeRemove-root"
  >
    <Modal
      aria-label="[Optional] Confirmed"
      danger={true}
      data-ui-id="IdeRemove-modal"
      hasScrollingContent={false}
      modalHeading="[Optional]  [resource name] removed"
      modalLabel="[Optional] Confirmed"
      onKeyDown={[Function]}
      onRequestClose={null}
      onRequestSubmit={[Function]}
      open={true}
      passiveModal={true}
      preventCloseOnClickOutside={false}
      primaryButtonDisabled={false}
      primaryButtonText="Delete"
      secondaryButtonText="Cancel"
      selectorPrimaryFocus="[data-modal-primary-focus]"
    >
      <React.Fragment>
        <p
          data-ui-id="IdeRemove-modal-body"
        >
          [Optional]  [resource name] has been removed. Close the modal to continue.
        </p>
      </React.Fragment>
    </Modal>
  </div>,
]
`;

exports[`IdeRemove unit tests view tests IdeRemove tolerates no props being provided, and renders with defaults 1`] = `
[
  <div
    data-ui-id="IdeRemove-root"
  >
    <Modal
      aria-label="Remove Label - provide a translated string"
      danger={true}
      data-ui-id="IdeRemove-modal"
      hasScrollingContent={false}
      modalHeading="Remove Heading - provide a translated string"
      modalLabel="Remove Label - provide a translated string"
      onKeyDown={[Function]}
      onRequestClose={null}
      onRequestSubmit={[Function]}
      open={false}
      passiveModal={false}
      preventCloseOnClickOutside={false}
      primaryButtonDisabled={false}
      primaryButtonText="Delete - provide a translated string"
      secondaryButtonText="Cancel - provide a translated string"
      selectorPrimaryFocus="[data-modal-primary-focus]"
    >
      <React.Fragment>
        <p
          data-ui-id="IdeRemove-modal-body"
        >
          Remove Body - provide a translated string
        </p>
      </React.Fragment>
    </Modal>
  </div>,
]
`;
